@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2011 the original author or authors.
+ * Copyright 2002-2012 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,10 +16,13 @@
 
 package org.springframework.web.servlet.mvc.method.annotation;
 
+import java.beans.PropertyEditor;
 import java.util.HashMap;
 import java.util.Map;
 
 import org.springframework.core.MethodParameter;
+import org.springframework.core.convert.converter.Converter;
+import org.springframework.util.StringUtils;
 import org.springframework.web.bind.ServletRequestBindingException;
 import org.springframework.web.bind.WebDataBinder;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -27,6 +30,7 @@ import org.springframework.web.bind.annotation.ValueConstants;
 import org.springframework.web.context.request.NativeWebRequest;
 import org.springframework.web.context.request.RequestAttributes;
 import org.springframework.web.method.annotation.AbstractNamedValueMethodArgumentResolver;
+import org.springframework.web.method.annotation.RequestParamMapMethodArgumentResolver;
 import org.springframework.web.method.support.ModelAndViewContainer;
 import org.springframework.web.servlet.HandlerMapping;
 import org.springframework.web.servlet.View;
@@ -34,13 +38,23 @@ import org.springframework.web.servlet.View;
 /**
  * Resolves method arguments annotated with an @{@link PathVariable}.
  *
- * <p>An @{@link PathVariable} is a named value that gets resolved from a URI template variable. It is always 
- * required and does not have a default value to fall back on. See the base class 
- * {@link org.springframework.web.method.annotation.AbstractNamedValueMethodArgumentResolver} for more information on how named values are processed.
- * 
- * <p>A {@link WebDataBinder} is invoked to apply type conversion to resolved path variable values that 
+ * <p>An @{@link PathVariable} is a named value that gets resolved from a URI
+ * template variable. It is always required and does not have a default value
+ * to fall back on. See the base class
+ * {@link org.springframework.web.method.annotation.AbstractNamedValueMethodArgumentResolver}
+ * for more information on how named values are processed.
+ *
+ * <p>If the method parameter type is {@link Map}, the name specified in the
+ * annotation is used to resolve the URI variable String value. The value is
+ * then converted to a {@link Map} via type conversion assuming a suitable
+ * {@link Converter} or {@link PropertyEditor} has been registered.
+ * Or if the annotation does not specify name the
+ * {@link RequestParamMapMethodArgumentResolver} is used instead to provide
+ * access to all URI variables in a map.
+ *
+ * <p>A {@link WebDataBinder} is invoked to apply type conversion to resolved path variable values that
  * don't yet match the method parameter type.
- * 
+ *
  * @author Rossen Stoyanchev
  * @author Arjen Poutsma
  * @since 3.1
@@ -52,7 +66,14 @@ public class PathVariableMethodArgumentResolver extends AbstractNamedValueMethod
 	}
 
 	public boolean supportsParameter(MethodParameter parameter) {
-		return parameter.hasParameterAnnotation(PathVariable.class);
+		if (!parameter.hasParameterAnnotation(PathVariable.class)) {
+			return false;
+		}
+		if (Map.class.isAssignableFrom(parameter.getParameterType())) {
+			String paramName = parameter.getParameterAnnotation(PathVariable.class).value();
+			return StringUtils.hasText(paramName);
+		}
+		return true;
 	}
 
 	@Override
@@ -64,7 +85,7 @@ public class PathVariableMethodArgumentResolver extends AbstractNamedValueMethod
 	@Override
 	@SuppressWarnings("unchecked")
 	protected Object resolveName(String name, MethodParameter parameter, NativeWebRequest request) throws Exception {
-		Map<String, String> uriTemplateVars = 
+		Map<String, String> uriTemplateVars =
 			(Map<String, String>) request.getAttribute(
 					HandlerMapping.URI_TEMPLATE_VARIABLES_ATTRIBUTE, RequestAttributes.SCOPE_REQUEST);
 		return (uriTemplateVars != null) ? uriTemplateVars.get(name) : null;
@@ -79,10 +100,10 @@ public class PathVariableMethodArgumentResolver extends AbstractNamedValueMethod
 
 	@Override
 	@SuppressWarnings("unchecked")
-	protected void handleResolvedValue(Object arg, 
-									   String name, 
+	protected void handleResolvedValue(Object arg,
+									   String name,
 									   MethodParameter parameter,
-									   ModelAndViewContainer mavContainer, 
+									   ModelAndViewContainer mavContainer,
 									   NativeWebRequest request) {
 		String key = View.PATH_VARIABLES;
 		int scope = RequestAttributes.SCOPE_REQUEST;
