@@ -22,6 +22,7 @@ Changes in version 3.2 M1
 * fix content negotiation issue when sorting selected media types by quality value
 * Prevent further writing to the response when @ResponseStatus contains a reason
 * Deprecate HttpStatus codes 419, 420, 421
+* support access to all URI vars via @PathVariable Map<String, String>
 
 Changes in version 3.1.1 (2012-02-16)
 -------------------------------------
